force-app/main/default/objects/payment2__c/payment2__c.object-meta.xml
<CustomObject>
    <label>payment2</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>payment2 id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>payment2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>