force-app/main/default/objects/payment2__c/fields/addOn__c.field-meta.xml
<CustomField>
    <fullName>addOn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>addOn</label>
    <referenceTo>addOn__c</referenceTo>
    <relationshipLabel>payment2s</relationshipLabel>
    <relationshipName>payment2s</relationshipName>
    <type>Lookup</type>
</CustomField>