force-app/main/default/objects/payment2__c/fields/amount_paid__c.field-meta.xml
<CustomField>
    <fullName>amount_paid__c</fullName>
    <label>amount paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>