force-app/main/default/objects/payment2__c/fields/customer_subscription__c.field-meta.xml
<CustomField>
    <fullName>customer_subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>customer subscription</label>
    <referenceTo>customer_subscription__c</referenceTo>
    <relationshipLabel>payment2s</relationshipLabel>
    <relationshipName>payment2s</relationshipName>
    <type>Lookup</type>
</CustomField>