force-app/main/default/objects/payment2__c/fields/payment_status__c.field-meta.xml
<CustomField>
    <fullName>payment_status__c</fullName>
    <label>payment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>unpaid</fullName>
            </value>
            <value>
                <fullName>paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>